--- a/pof_geocoder.ipynb
+++ b/pof_geocoder.ipynb
@@ -11,36 +11,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key = 'pk.eyJ1IjoiZWFzaGVybWEiLCJhIjoiY2oxcW51Nzk2MDBkbTJxcGUxdm85bW5xayJ9.7mL0wQ7cjifWwt5DrXMuJA'\n",
-    "m = geocoder.mapbox('121 N LaSalle Dr, Chicago, IL 60602', key=key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "key = 'pk.eyJ1IjoiZWFzaGVybWEiLCJhIjoiY2oxcW51Nzk2MDBkbTJxcGUxdm85bW5xayJ9.7mL0wQ7cjifWwt5DrXMuJA'\n",
-    "g = geocoder.google('121 N LaSalle Dr, Chicago, IL 60602')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "g = geocoder.google('121 N LaSalle Dr, Chicago, IL 60602')\n",
-    "e = geocoder.arcgis('121 N LaSalle Dr, Chicago, IL 60602')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -49,29 +19,6 @@
     "\n",
     "df = pd.read_csv('./documenters_aggregator/local_outputs/chi_police_20180312_2010.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_addy = df['location_address'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -262,6 +209,104 @@
     "folium.LayerControl().add_to(m)\n",
     "\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testing2 = geocoder.mapbox('3115 North Mason Avenue, Chicago, Illinois 60634, United States', key= geo.key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Santander, Colombia [6.938039, -73.273945] 1 0.3333333333333333 None\n",
+      "Sulawesi Tengah, Indonesia [-0.945041, 122.399544] 1 0.3333333333333333 None\n",
+      "Santiago, Dominican Republic [19.338071, -70.964806] 1 0.3333333333333333 None\n",
+      "Surat Thani, Thailand [9.052613, 99.115455] 1 0.3333333333333333 None\n",
+      "Sachsen-Anhalt, Germany [51.990429, 11.558208] 1 0.3333333333333333 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#clearly not great results\n",
+    "for r in test_raw[0]:\n",
+    "    print(r.address, r.latlng, r.confidence, r.quality, r.accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3115 North Mason Avenue, Chicago, Illinois 60634, United States [41.938369, -87.774988] 0 0.3333333333333333 interpolated\n"
+     ]
+    }
+   ],
+   "source": [
+    "#quality is low, but there is only one result (and it appears to be correct)\n",
+    "for r in test_bbox[0]:\n",
+    "    print(r.address, r.latlng, r.confidence, r.quality, r.accuracy)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3115 North Mason Avenue, Chicago, Illinois 60634, United States [41.938369, -87.774988] 0 0.7 interpolated\n",
+      "Chicago, Illinois, United States [41.8756, -87.6244] 1 0.5 None\n",
+      "Illinois Medical District, Chicago, Illinois 60612, United States [41.87, -87.67] 7 0.49 None\n",
+      "Mason, Illinois, United States [38.9531, -88.6237] 1 0.4 None\n",
+      "Illinois, United States [39.739182, -89.451439] 1 0.25 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in test_city_state[0]:\n",
+    "    print(r.address, r.latlng, r.confidence, r.quality, r.accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3115 North Mason Avenue, Chicago, Illinois 60634, United States [41.938369, -87.774988] 0 0.8999999999999999 interpolated\n",
+      "North Mason Avenue, Chicago, Illinois 60630, United States [41.97332, -87.776688] 0 0.6666666666666666 None\n",
+      "North Mason Avenue, Chicago, Illinois 60646, United States [42.009994, -87.773919] 0 0.6666666666666666 None\n",
+      "North Mason Avenue, Chicago, Illinois 60644, United States [41.883724, -87.773671] 0 0.6666666666666666 None\n",
+      "Chicago, Illinois, United States [41.8756, -87.6244] 1 0.6000000000000001 None\n"
+     ]
+    }
+   ],
+   "source": [
+    "#we could feed the highest quality parsed result from the first one and run that again/through other providers to get more confident\n",
+    "testing2 = geocoder.mapbox('3115 North Mason Avenue, Chicago, Illinois 60634, United States', key= geo.key)\n",
+    "for r in testing2:\n",
+    "    print(r.address, r.latlng, r.confidence, r.quality, r.accuracy)"
    ]
   },
   {
